--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,20 +14,22 @@
       "dom",
       "es5",
       "es6",
-      "scripthost"
+      "es7",
+      "scripthost",
+      "es2018.promise"
     ],
+    "emitDecoratorMetadata": true,
+    "preserveConstEnums": true,
     "paths": {
       "pri/*": [
         "pri",
         ".temp/types/*"
-      ],
-      "src/*": [
-        "src/*"
       ]
     }
   },
   "include": [
     ".temp/**/*",
+    "typings/**/*",
     "src/**/*"
   ],
   "exclude": [
